<resources>
    <string name="app_name">BookBuddy</string>
    <string name="books">Knjige</string>
    <string name="add_book">Dodaj knjigu</string>
    <string name="settings">Postavke</string>
    <string name="about">O aplikaciji</string>
    <string name="search">Pretraži</string>
    <string name="title">Naslov</string>
    <string name="author">Autor</string>
    <string name="rating">Ocjena</string>
    <string name="delete">Obriši</string>
    <string name="cancel">Odustani</string>
    <string name="save">Spremi</string>

    <string name="sure_to_delete">Jeste li sigurni da želite obrisati knjugu "%1$s"?</string>
    <string name="no_books_found">Nema dodanih knjiga</string>
    <string name="add_your_first_book">Dodajte svoju prvu knjigu!</string>

    <string name="app_slogan">Vaš digitalni dnevnik čitanja</string>
    <string name="splash_loading">Učitavanje...</string>

    <string name="genre_fiction">Fikcija</string>
    <string name="genre_non_fiction">Nefikcija</string>
    <string name="genre_mystery">Misterij</string>
    <string name="genre_romance">Romansa</string>
    <string name="genre_science_fiction">Znanstvena fantastika</string>
    <string name="genre_fantasy">Fantazija</string>
    <string name="genre_biography">Biografija</string>
    <string name="genre_history">Povijest</string>
    <string name="genre_self_help">Samopomoć</string>
    <string name="genre_other">Ostalo</string>

    <string name="status_want_to_read">Želim pročitati</string>
    <string name="status_currently_reading">Trenutno čitam</string>
    <string name="status_finished">Završeno</string>
    <string name="status_abandoned">Napušteno</string>

    <string name="notification_channel_name">BookBuddy obavijesti</string>
    <string name="notification_channel_description">Obavijesti o čitanju i knjigama</string>
    <string name="notification_reading_reminder_title">Vrijeme za čitanje! 📚</string>
    <string name="notification_reading_reminder_text">Niste otvorili BookBuddy neko vrijeme. Pogledajte svoju kolekciju!</string>
    <string name="notification_new_books_title">Nove knjige dostupne</string>
    <string name="notification_new_books_text">%1$d novih knjiga dodano u vašu biblioteku</string>

    <string name="description">Opis</string>
    <string name="appearance">Izgled</string>
    <string name="notifications">Obavijesti</string>
    <string name="reading_reminders">Podsjetnici za čitanje</string>
    <string name="reading_reminders_summary">Primaj dnevne podsjetnike za čitanje</string>
    <string name="reminder_frequency">Učestalost podsjetnika</string>
    <string name="language">Jezik</string>
    <string name="theme">Tema</string>
    <string name="theme_light">Svijetla</string>
    <string name="theme_dark">Tamna</string>
    <string name="theme_system">Slijedi sistem</string>

    <string name="update">Ažuriraj</string>
    <string name="search_online">Pretraži online</string>
    <string name="searching">Pretraživanje...</string>
    <string name="not_rated">Neocijenjeno</string>
    <string name="publication_year">Godina izdanja</string>
    <string name="genre">Žanr</string>
    <string name="reading_status">Status čitanja</string>
    <string name="add_cover">Dodaj korice</string>
    <string name="change_cover">Izmjeni korice</string>
    <string name="enter_title_or_author">Unesi naslov ili autora za pretraživanje</string>
    <string name="search_failed">Pretraživanje neuspjelo</string>
    <string name="no_books_found_search">Nema pronađenih knjiga</string>
    <string name="failed_to_save_book">Neuspješno spremanje knjige</string>
    <string name="failed_to_update_book">Neuspješno ažuriranje knjige</string>
    <string name="title_required">Naslov je obavezan</string>
    <string name="author_required">Autor je obavezan</string>
    <string name="year_required">Godina je obavezna</string>
    <string name="enter_valid_year">Unesi valjanu godinu</string>
    <string name="genre_required">Žanr je obavezan</string>
    <string name="status_required">Status je obavezan</string>
    <string name="error">Greška</string>
    <string name="book_not_found">Knjiga nije pronađena</string>
    <string name="error_loading_book">Greška pri učitavanju knjige</string>
    <string name="added_on">Dodano %1$s</string>
    <string name="failed_to_delete_book">Neuspješno brisanje knjige</string>

    <string name="new_book">Nova knjiga</string>
    <string name="book_added_title">Knjiga dodana</string>
    <string name="book_added_text">"%1$s" je dodana u vašu biblioteku</string>
</resources>